<resources>
    <string name="app_name">Motion</string>
    <string name="NULL">null</string>
    <string name="NO_NETWORK">无网络连接</string>

    <!--顶部标题栏String-->
    <string name="top_titlebar_homepage">首页</string>
    <string name="top_titlebar_sport">运动中心</string>
    <string name="top_titlebar_community">社区</string>
    <string name="top_titlebar_diet">饮食健康</string>

    <!--底部导航栏String-->
    <string name="bottom_tab_homepage">首页</string>
    <string name="bottom_tab_sport">运动中心</string>
    <string name="bottom_tab_community">社区</string>
    <string name="bottom_tab_diet">饮食|健康</string>
    <string name="bottom_tab_me">我</string>

    <!--首页String-->
    <string name="homepage_nav_item1">人气课</string>
    <string name="homepage_nav_item2">亲子运动</string>
    <string name="homepage_nav_item3">体育达标</string>
    <string name="homepage_nav_item4">网球</string>
    <string name="homepage_nav_item5">篮球</string>
    <string name="homepage_nav_item6">更多课程</string>

    <string name="homepage_type_age">年龄分类</string>
    <string name="homepage_checkmore_age">查看更多年龄分类</string>

    <!--社区String-->
    <string name="community_tab_hot">热门</string>
    <string name="community_tab_followed">关注</string>

    <!--饮食健康String-->
    <string name="diet_tab_diet">饮食</string>
    <string name="diet_tab_health">健康</string>

    <!--课程详情String-->
    <string name="course_detail_title_main">课程详情</string>
    <string name="course_detail_title_movement">动作详情</string>
    <string name="course_detail_title_intro">课程介绍</string>
    <string name="course_detail_title_releated">相关热门好课</string>

    <string name="course_detail_title_intro_advice">练习建议</string>
    <string name="course_detail_title_intro_suitable">适合人群</string>
    <string name="course_detail_title_intro_effect">练习效果</string>

    <string name="course_detail_button_bottom_reserved">预定课程</string>
    <string name="course_detail_button_bottom_attend">参加课程</string>

    <string name="course_detail_failed_actions">加载动作失败</string>
    <string name="course_detail_failed_related_course">加载相关课程失败</string>

    <!--课程筛选String-->
    <string name="course_select_online">即将上线</string>

    <!--帖子界面String-->
    <string name="community_share_btn_follow">关注</string>

    <!--个人界面String-->
    <string-array name="me_choose_sex">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="me_close_alert">对话框已关闭</string>
    <string name="me_choose_sex1">请选择性别</string>
    <!--视频播放界面String-->
    <string name="sport_course_start_check_detail">动作详解</string>
    <string name="sport_course_start_accumulate_time">累计运动</string>
    <string name="sport_course_start_loading">加载中</string>

    <!--课程详情界面String-->
    <string name="sport_course_action_detail_name">动作名称</string>
    <string name="sport_course_action_detail_content">动作详情</string>
    <string name="sport_course_action_detail_start">开始训练</string>

    <!--课程休息界面String-->
    <string name="sport_course_start_skip_break">跳过休息</string>
    <string name="sport_course_start_break_text">距离休息结束还有</string>

    <!--课程完成界面String-->
    <string name="sport_course_completed_ok">完成</string>
    <string name="sport_completed_course_post_it">打卡到M圈</string>
    <string name="sport_completed_course_title_name">完成课程</string>
    <string name="sport_completed_course_title_count">累计完成次数</string>
    <string name="sport_completed_course_title_usedtime">用时</string>


    <string name="sport_completed_course_feelings_title">本次训练感觉如何？</string>
    <string name="sport_completed_course_feelings_easy">太简单了</string>
    <string name="sport_completed_course_feelings_hard">太难了</string>
    <string name="sport_completed_course_feelings_notbad">还不错</string>
    <string name="sport_completed_course_post_it_hint">“让其他小朋友看到你的努力～“</string>
    <string name="sport_course_start_break_skip_hint">是否要跳过休息？</string>
    <string name="sport_dialog_download_exit">退出训练</string>
    <string name="sport_dialog_download_downloading">正在下载</string>
    <string name="MByte">MB</string>


    <string name="course_selection_reselect">重新选择</string>
    <string name="course_selection_select_ok">确定</string>

    <string name="course_selection_tag_online_yes">已经上线</string>
    <string name="course_selection_tag_online_no">即将上线</string>
    <string name="course_selection_tag_sort_hot">按照人气排序</string>
    <string name="course_selection_tag_sort_date">按照日期排序</string>
    <string name="course_selection_nodata">没有相关数据,点击重试</string>
    <string name="course_selection_loading">加载中</string>
    <string name="homepage_subtitle_classification">分类</string>

    <string name="me_activity_bodydata_nodata">没有相关数据</string>
    <string name="me_fragment_main_username_unlogin">未登录</string>
    <string name="user_not_login">需要登陆才可查看哦,点击登陆</string>
    <string name="service_phone_number">13812342345</string>
    <string name="me_activity_downloaded_courses_title_bar">我的下载</string>
    <string name="me_activity_downloaded_courses_edit">编辑</string>
    <string name="me_activity_downloaded_courses_state_load_fail">本地缓存课程数据读取失败</string>
    <string name="download_courses_nodata">暂无已缓存课程</string>
    <string name="homepage_nav_hot">人气课</string>
    <string name="homepage_nav_more">更多</string>

</resources>
