<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_homepage"
        android:icon="@drawable/ic_tab_homepage"
        android:title="@string/bottom_tab_homepage" />
    <item
        android:id="@+id/main_sport"
        android:icon="@drawable/ic_tab_sport"
        android:title="@string/bottom_tab_sport" />
    <item
        android:id="@+id/main_community"
        android:icon="@drawable/ic_tab_community"
        android:title="@string/bottom_tab_community" />
    <item
        android:id="@+id/main_diet"
        android:icon="@drawable/ic_tab_diet"
        android:title="@string/bottom_tab_diet" />
    <item
        android:id="@+id/main_me"
        android:icon="@drawable/ic_tab_me"
        android:title="@string/bottom_tab_me" />
</menu>