<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/ll_homepage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_homepage_main_clicked" />

        <TextView
            android:id="@+id/tv_homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_tab_homepage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sport"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_sport"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:src="@drawable/ic_sport_main_unclicked" />

        <TextView
            android:id="@+id/tv_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_tab_sport" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_communnity"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_community"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:src="@drawable/ic_community_main_unclicked" />

        <TextView
            android:id="@+id/tv_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_tab_community" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_diet"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_diet"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:src="@drawable/ic_diet_main_unclicked" />

        <TextView
            android:id="@+id/tv_diet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_tab_diet" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_me"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_me"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:src="@drawable/ic_me_main_unclicked" />

        <TextView
            android:id="@+id/tv_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_tab_me" />

    </LinearLayout>

</LinearLayout>