<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F6F6F6"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/top_titlebar_homepage"
            android:textColor="@color/purple_main"
            android:textSize="24sp" />


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_marginBottom="27dp"
                android:background="@drawable/homepage_nav_radius_white"
                android:gravity="center"
                android:paddingLeft="35dp"
                android:paddingTop="20dp"
                android:paddingRight="35dp"
                android:paddingBottom="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivNavItem1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_homepage_nav_item_1" />

                    <ImageView
                        android:id="@+id/ivNavItem2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="60dp"
                        android:layout_marginRight="60dp"
                        android:src="@drawable/ic_homepage_nav_item_2" />

                    <ImageView
                        android:id="@+id/ivNavItem3"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_homepage_nav_item_3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvNavItem1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/homepage_nav_item1"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black_homepage_nav_text" />

                    <TextView
                        android:id="@+id/tvNavItem2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/homepage_nav_item2"
                        android:textAlignment="center"
                        android:textColor="@color/black_homepage_nav_text" />

                    <TextView
                        android:id="@+id/tvNavItem3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/homepage_nav_item3"
                        android:textAlignment="center"
                        android:textColor="@color/black_homepage_nav_text" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivNavItem4"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_homepage_nav_item_4" />

                    <ImageView
                        android:id="@+id/ivNavItem5"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="60dp"
                        android:layout_marginRight="60dp"
                        android:src="@drawable/ic_homepage_nav_item_5" />

                    <ImageView
                        android:id="@+id/ivNavItem6"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_homepage_nav_item_6" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvNavItem4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/homepage_nav_item4"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black_homepage_nav_text" />

                    <TextView
                        android:id="@+id/tvNavItem5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/homepage_nav_item5"
                        android:textAlignment="center"
                        android:textColor="@color/black_homepage_nav_text" />

                    <TextView
                        android:id="@+id/tvNavItem6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/homepage_nav_item6"
                        android:textAlignment="center"
                        android:textColor="@color/black_homepage_nav_text" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_types_radius_white"
                android:paddingBottom="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:background="@drawable/homepage_types_radius_purple"
                    android:paddingLeft="20dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="@string/homepage_type_age"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_checkmore_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/homepage_checkmore_age"
                        android:textAlignment="center"
                        android:textColor="@color/black_homepage_nav_text"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>