<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="19dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/top_titlebar_diet"
            android:textColor="@color/purple_main"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/diet_main_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:src="@drawable/ic_search_purple" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.tabs.TabLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:tabIndicatorColor="@color/purple_main"
                app:tabIndicatorFullWidth="false"
                app:tabRippleColor="@null"
                app:tabSelectedTextColor="@color/purple_main"
                app:tabTextColor="@color/gray"
                app:tabTextAppearance="@style/TopNavigationTextStyle">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diet_tab_diet" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diet_tab_health" />

            </com.google.android.material.tabs.TabLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/diet_main_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/community_item_share" />

    </LinearLayout>
</LinearLayout>