<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.sport_activity_course_completed">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_bg_img_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_course_completed_splited_head"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:text="@string/sport_course_completed_ok"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:forceDarkAllowed="false"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_course_completed_splited_foot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_bg_img_head" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_bg_img_head">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/view_radius_white"
                android:elevation="5dp"
                android:padding="16dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_head"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@+id/view_center_line"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    app:riv_oval="true"
                    tools:src="@drawable/ocean" />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/iv_head"
                    android:layout_toEndOf="@+id/iv_head"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    tools:text="用户昵称" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_nickname"
                    android:layout_alignBottom="@+id/iv_head"
                    android:layout_toEndOf="@+id/iv_head"
                    tools:text="2021/01/27 08:00" />

                <View
                    android:id="@+id/view_center_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="20dp"
                    android:background="@color/gray_light" />

                <TextView
                    android:id="@+id/tv_sport_completed_course_title_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_center_line"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="7dp"
                    android:text="@string/sport_completed_course_title_count"
                    android:textColor="@color/gray_text" />

                <TextView
                    android:id="@+id/tv_sport_compeleted_course_title_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_center_line"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="7dp"
                    android:layout_toStartOf="@+id/tv_sport_completed_course_title_count"
                    android:text="@string/sport_completed_course_title_name"
                    android:textAlignment="center"
                    android:textColor="@color/gray_text" />

                <TextView
                    android:id="@+id/tv_sport_compeleted_course_title_usedtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_center_line"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="7dp"
                    android:layout_toEndOf="@+id/tv_sport_completed_course_title_count"
                    android:text="@string/sport_completed_course_title_usedtime"
                    android:textAlignment="center"
                    android:textColor="@color/gray_text" />

                <TextView
                    android:id="@+id/tv_sport_completed_course_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sport_compeleted_course_title_name"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/tv_sport_completed_course_title_count"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/black_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="课程名称课程名称课程名称" />

                <TextView
                    android:id="@+id/tv_sport_compeleted_course_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_sport_completed_course_title_count"
                    android:layout_alignStart="@+id/tv_sport_completed_course_title_count"
                    android:layout_alignEnd="@+id/tv_sport_completed_course_title_count"
                    android:layout_alignParentBottom="true"
                    android:textAlignment="center"
                    android:textColor="@color/black_text"
                    android:textSize="18sp"
                    tools:text="4次" />

                <TextView
                    android:id="@+id/tv_sport_compeleted_course_usedtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sport_compeleted_course_title_usedtime"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@+id/tv_sport_completed_course_title_count"
                    android:textAlignment="center"
                    android:textColor="@color/black_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="05:33" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/view_radius_white"
                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sport_completed_course_feelings_title"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_feelings_hard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_heart"
                        android:text="@string/sport_completed_course_feelings_hard"
                        android:textAlignment="center"
                        android:textColor="@color/black_text" />

                    <TextView
                        android:id="@+id/tv_feelings_easy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_heart"
                        android:text="@string/sport_completed_course_feelings_easy"
                        android:textAlignment="center"
                        android:textColor="@color/black_text" />

                    <TextView
                        android:id="@+id/tv_feelings_notbad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_heart"
                        android:text="@string/sport_completed_course_feelings_notbad"
                        android:textAlignment="center"
                        android:textColor="@color/black_text" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/button_radius_purple"
                android:text="@string/sport_course_completed_ok"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/sport_completed_course_post_it_hint"
                android:textAlignment="center"
                android:textColor="@color/gray_light"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>